test/runtime-integration-tests/TestPrograms/Syntax/Invalid/import_non_identifier.5th
use 123;
main(): int { return 0; }
